[package]
authors = ["Nicolas Marshall <marshall.nicolas@gmail.com>"]
edition = "2018"
name = "kademlia"
version = "0.1.0"

[dependencies]
tokio = { version = "0.2.22", features=["full"] }
tokio-util = { version = "0.3.0", features=["full"] }
log = "*"
rand = "*"
rust-crypto = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
anyhow = "1.0.25"

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"




