[package]
authors = ["Nicolas Marshall <marshall.nicolas@gmail.com>"]
edition = "2018"
name = "kademlia"
version = "0.1.0"

[dependencies]
tokio = { version = "0.2.22", features=["full"] }
tokio-util = { version = "0.3.0", features=["full"] }
tokio-serde = "0.6"
log = "*"
rand = "*"
rust-crypto = "*"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
anyhow = "1.0.25"
tracing = "0.1" # for async info/warn/trace
# bytes = "0.5.4" # for tokio codecs
tokio-serde-json = "0.2" # for tokio codecs

[dev-dependencies]
tracing-subscriber = "0.2"




