[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead.
[dev-dependencies]
tokio = { version = "0.2.22", features=["full"] }
tokio-util = { version = "0.3.0", features=["full"] }
# tracing = "0.1"
# tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
# bytes = "0.5"
# futures = "0.3.0"
# http = "0.2"
# serde = "1.0"
# serde_derive = "1.0"
# serde_json = "1.0"
# httparse = "1.0"
# time = "0.1"

[[example]]
name = "hello_tokio"
path = "hello_tokio.rs"